# demo-ai-agents

./: .gitignore  README.md  pyproject.toml
samples/autogen/idea-to-issue-agents/: main.py  pyproject.toml
samples/autogen/idea-to-issue-agents/agents/: github_issue_agent.py  project_idea_agent.py  user_story_agent.py
samples/autogen/project-to-readme-agents/: main.py  pyproject.toml
samples/autogen/project-to-readme-agents/agents/: file_listener_agent.py  file_reader_agent.py  file_selector_agent.py  markdown_writer_agent.py
samples/flock/: 00_arepl_scratchpad.py  04_descriptions.py  05_typed_output2.py
samples/semantic-kernel/idea-to-issue-agents/: main.py
samples/semantic-kernel/idea-to-issue-agents/agents/: github_issue_agent.py  project_idea_agent.py  user_story_agent.py
samples/semantic-kernel/socal-media-craft-agent/: main.py
samples/semantic-kernel/socal-media-craft-agent/agents/: seo_boost_agent.py  social_craft_agent.py
