[project]
name = "socal-media-craft-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "semantic-kernel>=1.20.0",
    "autogen-agentchat>=0.4.4",
    "autogen-ext[azure,openai,web-surfer]>=0.4.4",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]
