[project]
name = "hand-off-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.4.4",
    "autogen-ext[azure,openai,web-surfer,web-surver]>=0.4.4",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]
